Change grid bg color on hover to black

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ div.grid-sq-row {
 
 body {
   background-color: #cb997e;
-  color: white;
+  color: #fff1e6;
   gap: 2rem;
   justify-content: center;
   align-items: center;
