--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,10 @@ div.grid-sq-row {
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #cb997e;
   color: #fff1e6;
-  gap: 2rem;
+  padding: 0.5rem;
   justify-content: center;
   align-items: center;
 }
@@ -28,10 +29,31 @@ h1 {
 
 div.grid-sq-row {
   flex-direction: row;
+  max-width: 60rem;
 }
 
 div.grid-sq {
-  width: 3rem;
-  height: 3rem;
-  border: 1px solid #fff1e6;
+  flex: 1;
+  width: 2rem;
+  height: 2rem;
+  border: 0.1rem solid #fff1e6;
+}
+
+button {
+  margin-right: auto;
+  font-size: 1rem;
+  color: #fff1e6;
+  padding: 0.2rem 1rem;
+  background-color: #cb997e;
+  font-weight: 700;
+  box-shadow: inset 0 0 0 0 #fff1e6;
+  border: 0.2rem solid #fff1e6;
+  transition: all 0.2s;
+}
+
+button:hover {
+  color: #cb997e;
+  padding: 0.2rem 1rem;
+  box-shadow: inset 15rem 0 0 0#fff1e6;
+  cursor: pointer;
 }
